--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -52,9 +52,10 @@
       </tbody>
     </table>
   </main>
-
-  <footer>
-    <p>Copyright © 2024 TechCon. All rights reserved.</p>
+  
+ <footer>
+    <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
   </footer>
+
 </body>
 </html>
